--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#e0e0e0">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#e0e0e0"
+    android:paddingRight="30dp">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline12"
@@ -28,8 +29,8 @@
             android:layout_width="121dp"
             android:layout_height="140dp"
             android:background="@drawable/shape_textview"
-            android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/friendImg"
