--- a/app/src/main/res/layout/app_bar_noticeupdate.xml
+++ b/app/src/main/res/layout/app_bar_noticeupdate.xml
@@ -9,7 +9,7 @@
 
     <include
         layout="@layout/content_noticeupdate"
-        android:layout_width="414dp"
+        android:layout_width="wrap_content"
         android:layout_height="672dp"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
 
