--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="5dp"
     android:layout_marginRight="10dp"
@@ -12,7 +12,7 @@
     app:cardCornerRadius="28dp">
 
     <LinearLayout
-        android:layout_width="397dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:orientation="horizontal"
@@ -22,7 +22,7 @@
 
         <LinearLayout
             android:id="@+id/activityy"
-            android:layout_width="410dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ffffff"
             android:clickable="true"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_textview"
                 android:clickable="true"
-                android:textSize="18sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
     </LinearLayout>
