--- a/app/src/main/res/layout/content_noticeupdate.xml
+++ b/app/src/main/res/layout/content_noticeupdate.xml
@@ -32,8 +32,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="427dp"
-        android:layout_height="676dp"
+        android:layout_width="match_parent"
+        android:layout_height="680dp"
         android:layout_marginTop="55dp"
         android:background="#e0e0e0"
         android:orientation="vertical"
@@ -53,8 +53,9 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
             android:background="#e0e0e0"
-            android:padding="5sp">
+            tools:layout_marginLeft="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,9 +64,8 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycleview"
-                    android:layout_width="365dp"
+                    android:layout_width="match_parent"
                     android:layout_height="657dp"
-                    android:layout_marginLeft="10dp"
                     android:background="#e0e0e0" />
 
             </LinearLayout>
