調整toolbar、個人資料設定時，年齡限制最小7歲、補上活動限制條件

--- a/app/src/main/res/layout/activity_friend_request.xml
+++ b/app/src/main/res/layout/activity_friend_request.xml
@@ -46,8 +46,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rrecycleview"
                     android:layout_width="match_parent"
-                    android:layout_height="657dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_height="657dp" />
 
             </LinearLayout>
         </ScrollView>
