--- a/app/src/main/res/layout/activity_favoritee.xml
+++ b/app/src/main/res/layout/activity_favoritee.xml
@@ -8,13 +8,23 @@
     tools:context=".verifyActivity">
 
 
-    <include
-        android:id="@+id/chat_toolbar"
-        layout="@layout/app_bar_layout"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"></include>
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="#000000" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_recycle"
@@ -22,7 +32,9 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/myLinearLayout"
         android:layout_below="@+id/chat_toolbar"
-        android:layout_marginBottom="6dp"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="52dp"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"></androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
