--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -7,31 +7,39 @@
     android:background="#e0e0e0">
 
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="#000000" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar4"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="411dp"
         android:layout_height="678dp"
-        android:layout_marginTop="55dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="@id/guideline9"
         app:layout_constraintStart_toStartOf="@id/guideline9"
-        app:layout_constraintTop_toTopOf="@id/toolbar4">
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout">
 
         <TextView
             android:id="@+id/Title"
@@ -55,8 +63,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rrecycleview"
                     android:layout_width="match_parent"
-                    android:layout_height="657dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_height="657dp" />
 
             </LinearLayout>
         </ScrollView>
