--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -11,9 +11,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="JOINME"
         android:textColor="#000000"
-        android:textSize="32dp"
-        android:layout_gravity="center"/>
+        android:textSize="24dp" />
 
 </androidx.appcompat.widget.Toolbar>
