驗證頁面補上title 好友邀請介面微調排版 調整訊息fragment介面排版 時間改以內容調整大小

--- a/app/src/main/res/layout/activity_friend_request.xml
+++ b/app/src/main/res/layout/activity_friend_request.xml
@@ -7,22 +7,16 @@
     android:background="#e0e0e0">
 
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
-
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="411dp"
-        android:layout_height="678dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="@id/guideline8"
-        app:layout_constraintStart_toStartOf="@id/guideline8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_marginTop="50dp">
+        tools:layout_marginTop="60dp">
 
         <TextView
             android:id="@+id/Title"
