--- a/app/src/main/res/layout/activity_verifyy.xml
+++ b/app/src/main/res/layout/activity_verifyy.xml
@@ -26,15 +26,30 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/verify_recycle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/myLinearLayout"
-        android:layout_below="@+id/chat_toolbar"
-        android:layout_marginTop="52dp"
-        android:layout_marginBottom="6dp"
-        android:background="#e0e0e0"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="50dp"
+        android:background="#e0e0e0"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="驗證活動申請"
+            android:textSize="36sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/verify_recycle"
+            android:layout_width="match_parent"
+            android:layout_height="672dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="6dp"
+            android:background="#e0e0e0"></androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
 
 
 </RelativeLayout>
