--- a/app/src/main/res/layout/message_display_layout.xml
+++ b/app/src/main/res/layout/message_display_layout.xml
@@ -37,7 +37,7 @@
 
                 <TextView
                     android:id="@+id/user_profile_name"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:gravity="start"
@@ -48,9 +48,10 @@
 
                 <TextView
                     android:id="@+id/time"
-                    android:layout_width="150dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
                     android:gravity="start"
                     android:text="下午 1:43"
                     android:textAlignment="textStart"
@@ -66,26 +67,27 @@
                 android:orientation="horizontal">
 
                 <TextView
-                android:id="@+id/user_status"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:gravity="start"
-                android:paddingLeft="8dp"
-                android:text="user status"
-                android:textAlignment="textStart"
-                android:textSize="16sp" />
+                    android:id="@+id/user_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:gravity="start"
+                    android:paddingLeft="8dp"
+                    android:text="user status"
+                    android:textAlignment="textStart"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/content_count"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_margin="5dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:background="@drawable/star"
                     android:gravity="center"
                     android:text="5"
-                    android:textColor="#FFFFFF"
-                    android:background="@drawable/star"
                     android:textAlignment="center"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp" />
             </LinearLayout>
 
