報名頁面調整愛心位置

--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -48,8 +48,9 @@
                         android:id="@+id/favoritebtn"
                         android:layout_width="38dp"
                         android:layout_height="32dp"
+                        android:layout_gravity="center"
                         android:background="@drawable/heart"
-                        android:layout_gravity="center"/>
+                        tools:freezesText="true" />
                 </LinearLayout>
 
                 <LinearLayout
