--- a/app/src/main/res/layout/activity_verifyy.xml
+++ b/app/src/main/res/layout/activity_verifyy.xml
@@ -42,13 +42,27 @@
             android:text="驗證活動申請"
             android:textSize="36sp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/verify_recycle"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="672dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="6dp"
-            android:background="#e0e0e0"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/verify_recycle"
+                    android:layout_width="match_parent"
+                    android:layout_height="657dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="6dp"
+                    android:background="#e0e0e0"></androidx.recyclerview.widget.RecyclerView>
+            </LinearLayout>
+        </ScrollView>
+
     </LinearLayout>
 
 
