--- a/app/src/main/res/layout/app_bar_noticeupdate.xml
+++ b/app/src/main/res/layout/app_bar_noticeupdate.xml
@@ -28,8 +28,8 @@
 
     <include
         layout="@layout/content_noticeupdate"
-        android:layout_width="wrap_content"
-        android:layout_height="672dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
