--- a/app/src/main/res/menu/homepage.xml
+++ b/app/src/main/res/menu/homepage.xml
@@ -7,11 +7,11 @@
 <!--        android:title="@string/action_settings"-->
 <!--        app:showAsAction="never" />-->
 
-    <item
-    android:id="@+id/action_logout"
-    android:orderInCategory="100"
-    android:title="登出"
-    app:showAsAction="never" />
+<!--    <item-->
+<!--    android:id="@+id/action_logout"-->
+<!--    android:orderInCategory="100"-->
+<!--    android:title="登出"-->
+<!--    app:showAsAction="never" />-->
 
 <!--    <item-->
 <!--    android:id="@+id/findfriend"-->
