--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -78,6 +78,7 @@
                     android:background="@drawable/shape_textview"
                     android:gravity="center_horizontal"
                     android:hint="姓名"
+                    android:maxLength="7"
                     android:inputType="textMultiLine"
                     android:padding="6dp"
                     android:textAlignment="center"
