聊天室介面更改 ProfileActivity 修請求bug

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,6 +61,7 @@
         android:textSize="20sp"
         android:text="Add Friend"
         android:textAllCaps="false"
+        android:background="#00DB00"
         />
 
 
