--- a/app/src/main/res/layout/message_display_layout.xml
+++ b/app/src/main/res/layout/message_display_layout.xml
@@ -32,7 +32,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="25dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -46,12 +46,22 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp">
+
+
                 <TextView
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="start"
                     android:text="下午 1:43"
                     android:textAlignment="textStart"
@@ -61,18 +71,18 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/RelativeLayout01"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal">
-
+                android:layout_height="45dp">
                 <TextView
                     android:id="@+id/user_status"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_alignParentLeft="true"
                     android:gravity="start"
-                    android:paddingLeft="8dp"
                     android:text="user status"
                     android:textAlignment="textStart"
                     android:textSize="16sp" />
@@ -81,16 +91,15 @@
                     android:id="@+id/content_count"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
                     android:background="@drawable/star"
                     android:gravity="center"
+                    android:layout_alignParentRight="true"
                     android:text="5"
-                    android:textAlignment="center"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
-            </LinearLayout>
 
+
+            </RelativeLayout>
 
 
         </LinearLayout>
