--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -43,8 +43,8 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
-                        android:text="活動名稱"
-                        android:textSize="24sp" />
+                        android:text="*活動名稱"
+                        android:textSize="20sp" />
 
                     <EditText
                         android:id="@+id/editText6"
@@ -78,8 +78,8 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
-                        android:text="活動類型"
-                        android:textSize="24sp" />
+                        android:text="*活動類型"
+                        android:textSize="20sp" />
 
                     <Spinner
                         android:id="@+id/activityType"
@@ -112,8 +112,8 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
-                        android:text="揪團類型"
-                        android:textSize="24sp" />
+                        android:text="*揪團類型"
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/timebtn1"
@@ -157,8 +157,8 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginRight="10sp"
                             android:layout_weight="1"
-                            android:text="開始時間"
-                            android:textSize="24sp" />
+                            android:text="*開始時間"
+                            android:textSize="20sp" />
 
                         <Button
                             android:id="@+id/sDate"
@@ -192,8 +192,8 @@
                             android:layout_gravity="center_vertical"
                             android:layout_marginRight="10sp"
                             android:layout_weight="1"
-                            android:text="結束時間"
-                            android:textSize="24sp" />
+                            android:text="*結束時間"
+                            android:textSize="20sp" />
 
                         <Button
                             android:id="@+id/eDate"
@@ -237,8 +237,8 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
-                        android:text="現在開始到"
-                        android:textSize="24sp" />
+                        android:text="*現在開始到"
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/aftertimebtn"
@@ -256,7 +256,7 @@
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
                         android:text="  後結束"
-                        android:textSize="24sp" />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -281,8 +281,8 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
-                        android:text="活動地點"
-                        android:textSize="24sp" />
+                        android:text="*活動地點"
+                        android:textSize="20sp" />
 
                     <fragment
                         android:id="@+id/autocomplete_fragment"
@@ -315,8 +315,8 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
-                        android:text="人數限制"
-                        android:textSize="24sp" />
+                        android:text="*人數限制"
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/peopleLimit"
@@ -351,7 +351,7 @@
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
                         android:text="活動封面"
-                        android:textSize="24sp" />
+                        android:textSize="20sp" />
 
                     <ImageView
                         android:id="@+id/imageView26"
@@ -384,7 +384,7 @@
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
                         android:text="說明"
-                        android:textSize="24sp" />
+                        android:textSize="20sp" />
 
                     <EditText
                         android:id="@+id/editText12"
@@ -418,7 +418,7 @@
                         android:layout_marginRight="10sp"
                         android:layout_weight="1"
                         android:text="活動限制"
-                        android:textSize="24sp" />
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/chooseRestriction"
