--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -64,7 +64,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rrecycleview"
                     android:layout_width="match_parent"
-                    android:layout_height="540dp"
+                    android:layout_height="500dp"
                     android:layout_marginLeft="10dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
@@ -75,7 +75,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <Button
                 android:id="@+id/btn_evaluate"
