拔掉聊天室app bar上的JOIN ME 個人頁面補上顯示狀態 設定個資頁面年齡小於7或大於100跳提示 修正個資頁面有欄位未填依舊可送出

--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -6,14 +6,4 @@
     android:layout_height="match_parent"
     android:background="@color/colorMain"
     android:layout_gravity="center_horizontal"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="JOINME"
-        android:textColor="#000000"
-        android:textSize="24dp" />
-
-</androidx.appcompat.widget.Toolbar>
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
