--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -71,11 +71,11 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/Age"
+                            android:id="@+id/Status"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="10dp"
-                            android:text="年齡"
+                            android:text="狀態"
                             android:textSize="18dp" />
 
                         <TextView
