驗證活動頁面排版調整 評價頁面活動標題置中

--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -46,9 +46,9 @@
             android:id="@+id/Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:text="排球!!"
+            android:gravity="center"
             android:textSize="36sp" />
 
         <ScrollView
