點分類時 地圖可即時顯示座標 調整評價頁面 調整好友邀請按鈕跑版

--- a/app/src/main/res/layout/user_display_layout.xml
+++ b/app/src/main/res/layout/user_display_layout.xml
@@ -83,24 +83,24 @@
                 <Button
                     android:id="@+id/request_accept_btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@drawable/shape_accept"
                     android:text="Accept"
                     android:textAllCaps="false"
-                    android:textSize="16sp"
+                    android:textSize="10sp"
                     android:visibility="invisible" />
 
                 <Button
                     android:id="@+id/request_cancel_btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="37dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="20dp"
                     android:background="@drawable/shape_reject"
                     android:text="Cancel"
                     android:textAllCaps="false"
                     android:textColor="@android:color/background_light"
-                    android:textSize="16sp"
+                    android:textSize="10sp"
                     android:visibility="invisible" />
 
             </LinearLayout>
