--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -53,8 +53,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="550dp"
-            android:padding="5sp">
+            android:layout_height="530dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -64,8 +63,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rrecycleview"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:layout_marginLeft="10dp">
+                    android:layout_height="600dp">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
