--- a/app/src/main/res/layout/activity_friend_request.xml
+++ b/app/src/main/res/layout/activity_friend_request.xml
@@ -28,8 +28,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="543dp"
-            android:padding="5sp">
+            android:layout_height="543dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
