--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -32,7 +32,7 @@
             <TextView
                 android:id="@+id/activity"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="49dp"
                 android:background="@drawable/shape_textview"
                 android:clickable="true"
                 android:textSize="14sp" />
