--- a/app/src/main/res/layout/message_display_layout.xml
+++ b/app/src/main/res/layout/message_display_layout.xml
@@ -72,7 +72,6 @@
             </LinearLayout>
 
             <RelativeLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/RelativeLayout01"
                 android:layout_width="match_parent"
                 android:layout_height="45dp">
@@ -89,13 +88,13 @@
 
                 <TextView
                     android:id="@+id/content_count"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentRight="true"
                     android:background="@drawable/star"
                     android:gravity="center"
-                    android:layout_alignParentRight="true"
                     android:text="5"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000000"
                     android:textSize="16sp" />
 
 
