--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -34,7 +34,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="678dp"
         android:layout_marginTop="55dp"
         android:orientation="vertical"
@@ -47,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="排球!!"
             android:gravity="center"
+            android:text="排球!!"
             android:textSize="36sp" />
 
         <ScrollView
@@ -73,8 +73,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btn_evaluate"
