--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -101,6 +101,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/evaluatePage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#ffffff"
