--- a/app/src/main/res/layout/item_act.xml
+++ b/app/src/main/res/layout/item_act.xml
@@ -36,7 +36,7 @@
                 android:layout_marginLeft="5dp">
 
                 <TextView
-                    android:id="@+id/actName"
+                    android:id="@+id/Name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -44,7 +44,7 @@
                     android:textSize="20dp" />
 
                 <TextView
-                    android:id="@+id/actLocation"
+                    android:id="@+id/Content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
