--- a/app/src/main/res/layout/verify_layout.xml
+++ b/app/src/main/res/layout/verify_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="272dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10sp"
-        android:background="@drawable/verify"
+        android:background="@drawable/box"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:padding="5sp">
@@ -103,7 +103,7 @@
                     android:layout_weight="1"
                     android:background="#00000000"
                     android:text="V批准"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:textSize="24sp" />
 
                 <Button
@@ -113,7 +113,7 @@
                     android:layout_weight="1"
                     android:background="#00000000"
                     android:text="X拒絕"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:textSize="24sp" />
 
             </LinearLayout>
