通知數量提示圖案調整顯示不顯示情況 調整登入頁 登入註冊位置

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -90,6 +90,7 @@
 
     <Button
         android:id="@+id/loginPage"
+        android:stateListAnimator="@null"
         android:layout_width="94dp"
         android:layout_height="43dp"
         android:background="#e0e0e0"
