--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -53,7 +53,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="journey"
-                            android:textSize="22dp"
+                            android:textSize="24dp"
                             android:textStyle="bold" />
 
                         <Button
@@ -75,23 +75,15 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="5dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/Status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
-                            android:text="狀態"
-                            android:textSize="18dp" />
+                        android:layout_height="110dp"
+                        android:layout_marginTop="3dp"
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/userAge"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="5dp"
                             android:gravity="center"
                             android:text="21"
                             android:textSize="18dp" />
@@ -100,10 +92,17 @@
                             android:id="@+id/userSex"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="5dp"
                             android:text="男"
                             android:textSize="18dp" />
 
+                        <TextView
+                            android:id="@+id/Status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:singleLine="false"
+                            android:text="狀態"
+                            android:textSize="18dp" />
                     </LinearLayout>
 
                 </LinearLayout>
