--- a/app/src/main/res/layout/favorite_layout.xml
+++ b/app/src/main/res/layout/favorite_layout.xml
@@ -14,6 +14,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/shape_textview"
+        android:gravity="center"
         android:orientation="horizontal">
 
 
@@ -25,8 +26,9 @@
 
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -67,7 +69,6 @@
             android:id="@+id/user_online_status"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/heart" />
 
