--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,10 +83,10 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@id/account"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.162"
         app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintVertical_bias="0.543"
-        app:layout_constraintHorizontal_bias="0.162"/>
+        app:layout_constraintVertical_bias="0.543" />
 
     <Button
         android:id="@+id/loginPage"
@@ -94,15 +94,15 @@
         android:layout_height="43dp"
         android:background="@drawable/loginbtnbck"
         android:stateListAnimator="@null"
-        app:layout_constraintVertical_bias="0.542"
-        app:layout_constraintHorizontal_bias="0.892"
         android:text="登入"
         android:textColor="@color/colorButtonText"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@id/account"
         app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView"/>
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintVertical_bias="0.542" />
 
     <Button
         android:id="@+id/forgetpassword"
@@ -125,6 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="206dp" />
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_constraintGuide_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
