--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -37,7 +37,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="159dp"
+                    android:layout_height="158dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:gravity="center_vertical"
@@ -53,7 +54,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="journey"
-                            android:textSize="24dp"
+                            android:textSize="20dp"
                             android:textStyle="bold" />
 
                         <Button
