調整個人頁面排版 調整報名頁排版 修正收藏頁面時間顯示成(HH:mm) 修正聊天室無訊息時時間會顯示null null 修正個人頁面上評價分數 取到小數點第一位 修正報名頁上時間只顯示到分 修正編輯個人頁toolbar顏色 修正檢視評價頁面上Btn顯示文字初始化

--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -41,7 +41,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="667dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="50dp">
 
         <LinearLayout
@@ -74,10 +74,12 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="323dp"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="@id/guideline7"
             app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/bkg">
+            app:layout_constraintTop_toBottomOf="@id/bkg"
+            tools:layout_marginTop="214dp"
+            tools:layout_marginBottom="43dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
