--- a/app/src/main/res/layout/item_totalevaluate.xml
+++ b/app/src/main/res/layout/item_totalevaluate.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="196dp"
     android:background="#e0e0e0">
 
     <androidx.constraintlayout.widget.Guideline
