--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/users_profile_image"
                     android:layout_width="wrap_content"
                     android:layout_height="120dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/head"
                     app:layout_constraintTop_toTopOf="@id/title" />
@@ -47,24 +48,25 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="75dp"
+                        android:layout_marginLeft="75dp"
                         android:layout_marginBottom="5dp"
-                        android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/userName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:text="journey"
-                            android:textSize="20dp"
+                            android:textSize="21dp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:layout_marginStart="35dp"
+                        android:layout_marginLeft="35dp"
                         android:orientation="horizontal">
 
                         <Button
@@ -85,6 +87,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="90dp"
+                        android:layout_marginStart="35dp"
+                        android:layout_marginLeft="35dp"
                         android:layout_marginTop="3dp"
                         android:orientation="vertical">
 
@@ -95,7 +99,7 @@
                             android:layout_marginBottom="5dp"
                             android:gravity="center"
                             android:text="21"
-                            android:textSize="18dp" />
+                            android:textSize="14dp" />
 
                         <TextView
                             android:id="@+id/userSex"
@@ -103,7 +107,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="5dp"
                             android:text="男"
-                            android:textSize="18dp" />
+                            android:textSize="14dp" />
 
                         <TextView
                             android:id="@+id/Status"
@@ -111,7 +115,7 @@
                             android:layout_height="wrap_content"
                             android:singleLine="false"
                             android:text="狀態"
-                            android:textSize="18dp" />
+                            android:textSize="14dp" />
                     </LinearLayout>
 
                 </LinearLayout>
