--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -8,10 +8,10 @@
 
     <LinearLayout
         android:id="@+id/content"
-        android:layout_width="407dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="55dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,9 +138,9 @@
                             android:id="@+id/textView9"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
                             android:text="發起人："
-                            android:textSize="20sp"
-                            android:layout_marginTop="5dp"/>
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/activityOrgName"
@@ -163,6 +163,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="@drawable/shape_textviewlogin"
                         android:text="刪除活動" />
 
                 </LinearLayout>
