調整地圖上群集不會立即顯示的問題(測試ok) 已修正審核頁莫名多一個換行符號不知為何==

--- a/app/src/main/res/layout/activity_editpersonalpage.xml
+++ b/app/src/main/res/layout/activity_editpersonalpage.xml
@@ -131,7 +131,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/userPhoneLay"
+        android:id="@+id/userPhone"
         android:layout_width="406dp"
         android:layout_height="56dp"
         android:layout_marginTop="15dp"
