--- a/app/src/main/res/layout/content_verify.xml
+++ b/app/src/main/res/layout/content_verify.xml
@@ -130,7 +130,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/userPhoneLay"
+                            android:id="@+id/userPhone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
